# gattn

./: .clang-format  .pre-commit-config.yaml  BUGS.org  CLAUDE.md  FEATURES.org  README.md  flake.nix  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package.yml
data/: gattn.gresource.xml  org.mmxgn.gattn.desktop
docs/: a11y-testing.md
packaging/: gattn.spec
packaging/debian/: changelog  control
src/: main.c  notify.c  notify.h  prefs_store.c  prefs_store.h  recents.c  recents.h  session.c  session.h  sessions_store.c  sessions_store.h  state_detector.c  state_detector.h
src/ui/: grid.c  grid.h  prefs.c  prefs.h  session_picker.c  session_picker.h  sidebar.c  sidebar.h
